--- a/app/css/main.css
+++ b/app/css/main.css
@@ -16,6 +16,9 @@ body {
       background-color: white !important; }
       body .mainContainer .navbar .nav-item {
         cursor: pointer; }
+  body .carouselImg {
+    width: 100%;
+    height: 75%; }
   body .googleCalendar {
     position: relative;
     height: 0;
@@ -65,4 +68,8 @@ body {
     pointer-events: auto; }
   @media only screen and (max-width: 991px) {
     body .mainContainer .navbar {
-      z-index: 99; } }
+      position: fixed;
+      z-index: 99; }
+    body .carouselImg {
+      width: 100%;
+      height: 50%; } }
