--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,31 +5,31 @@
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>  -->
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="d-block img-fluid w-100 h-75" src="img/storeFront.jpg" alt="">
+                <img class="d-block img-fluid  carouselImg" src="img/storeFront.jpg" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h3 class="text-shadow">We're Local</h3>
                   <p class="text-shadow">We're conveniently located in downtown Hurricane WV.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid w-100 h-75" src="img/brewedForYou.jpg" alt="">
+                <img class="d-block img-fluid  carouselImg" src="img/brewedForYou.jpg" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h3 class="text-shadow">Brewed For You</h3>
                   <p class="text-shadow">Our coffee doesn't sit in a pot. It's brewed just for you.</p>
                 </div>
               </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid w-100 h-75" src="img/slide-3.jpg" alt="">
+              <!-- <div class="carousel-item">
+                <img class="d-block img-fluid  carouselImg" src="img/slide-3.jpg" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h3 class="text-shadow">Third Slide</h3>
                   <p class="text-shadow">This is the caption for the third slide.</p>
                 </div>
-              </div>
+              </div> -->
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -50,7 +50,6 @@
         </div>
 
         <div class="backgroundFaded p-4 my-4">
-          <hr class="divider">
           <h2 class="text-center textLg textUppercase my-0">Featured Blog Post</h2>
           <hr class="divider">
           <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
