--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -9,7 +9,7 @@
 
         <!-- About Text -->
         <div class="aboutText col-md-7 my-5">
-            <p> Books and Brews is  place where everyone can socialize and relax while enjoying top quality drinks and food - at an affordable price - and surrounded by a library of used books</p>
+            <p> Books and Brews is a place where everyone can socialize and relax while enjoying top quality drinks and food - at an affordable price - and surrounded by a library of used books</p>
             
             <p>Our goal is to create a welcoming environment to everyone regardless of age, race, gender, or social status. This experience is not limited to individuals and will encompass families, friends, and communities. Being a book store it's only fitting to quote a book - In Howard Shultz’s book, pour your heart into it, he says, “We offer an affordable luxury. In our stores you may see a policeman or utility worker standing in line in front of a wealthy surgeon. The blue-collar man may not be able to afford the Mercedes the surgeon just drove up in, but he can order the same $2.00 cappuccino. They’re both giving themselves a reward and enjoying something world class.” (p. 119)</p>
             
